--- a/script/components/PlaylistArea.css
+++ b/script/components/PlaylistArea.css
@@ -2,4 +2,5 @@
   flex-basis: 300px;
   flex-grow: 1;
   margin: 0;
+  overflow-y: scroll;
 }
